2010-11-18 Dominique Dumont  <domi.dumont@free.fr> 1.221

        * Fix pod spelling errors (RT #62947). Thanks to carnil for the report and patches.
        * added config-edit test (build requires Test::Command)
        * config-edit: added application option
	* Model.pm: updated doc
	* bash_completion.config-edit: is now not executable

2010-11-10 Dominique Dumont  <domi.dumont@free.fr> 1.220

	* Fix Build.PL to install files found in lib/Config/Model/*.d
	* Added Cookbook::CreateModelFromDoc from SF wiki

2010-11-09 Dominique Dumont  <domi.dumont@free.fr> 1.219

        * config-edit: fixed syntax error
        * replaced command lines generated from template by bash-autocompletion.
        * Removed dependency on Text::Template
        * Added Config::Model::Manual::ModelCreationIntroduction doc from SF wiki

2010-11-05 Dominique Dumont  <domi.dumont@free.fr> 1.218

        * Moved doc from README into model.pm
	* Copyright: added deprecated parameters (Upstream-Name
	  Upstream-Maintainer Upstream-Source). Added migrate_from
	  instruction to migrate user data from old parameters to new
	  parameters.
	* Copyright: Removed fuzziness around trailing '+' in licence names
	* AnyThing.pm: grab() : accept '+' without surrounding quotes in argument
	* WarpedNode: delegates copy_from and dump_tree to Node (fixes hash 
	  copy with warped nodes)
	* config-edit: added -open_item option
	* Build.PL: configure_depends on Text::Template to avoid CPANPLUS 
	  installation failure

2010-10-26 Dominique Dumont  <domi.dumont@free.fr> 1.217

        * Fix issue where value reference did not follow refered
	  to parameters after creation.
	* Fstab example: split the model for the Debian mini-debconf
	workshop

2010-10-26 Dominique Dumont  <domi.dumont@free.fr> 1.216

        * Control.pl: fixed control fields order to be less confusing (thanks to ansgar
	  for the advice)
        * Backend IniFile: Bug fix to write top level parameters before the first INI class