@@ -1,7 +1,7 @@
 # -*- cperl -*-
 
 use ExtUtils::testlib;
-use Test::More tests => 14;
+use Test::More tests => 16;
 use Config::Model;
 use Config::Model::Annotation;
 use File::Path ;
@@ -45,15 +45,15 @@ my $root = $inst -> config_root ;
 ok($root,"Config root created") ;
 
 my $step = 'std_id:ab X=Bv - std_id:bc X=Av - a_string="toto tata" '
-  .'lista=a,b,c,d olist:0 X=Av - olist:1 X=Bv - listb=b,c,d '
+  .'lista=a,b,c,d olist:0 X=Av - olist:1#olist1_comment X=Bv - listb=b,c,d '
     . '! hash_a:X2=x hash_a:Y2=xy hash_a:toto#"index comment"
         hash_b:X3=xy my_check_list=X2,X3' ;
 ok( $root->load( step => $step, experience => 'advanced' ),
   "set up data in tree with '$step'");
 
 my @annotate = map { [ $_ => "$_ annotation" ] }
-  ('std_id','std_id:bc X','my_check_list') ;
-my %expect = ( 'hash_a:toto' => "index comment");
+  ('std_id','std_id:bc X','my_check_list','olist:0','olist:2') ;
+my %expect = ( 'hash_a:toto' => "index comment", 'olist:1' => 'olist1_comment');
 
 foreach (@annotate) {
     my ($l,$a) = @$_ ;
@@ -105,14 +105,23 @@ my $h2_ref = $saver2->get_annotation_hash() ;
 #use Data::Dumper ; print Dumper ( $h_ref ) ;
 print Dumper ( $h2_ref ) if $trace ;
 my %expect2 = %expect ;
+
+# delete annotations loaded on missing elements
 delete $expect2{'std_id:bc X'} ;
 delete $expect2{'hash_a:toto'} ;
+delete $expect2{'olist:0'} ;
+delete $expect2{'olist:1'} ;
+delete $expect2{'olist:2'} ;
 
 is_deeply ($h2_ref,\%expect2 ,"check loaded annotation data with empty tree") ;
 
 $root2->load( step => $step, experience => 'advanced' ) ;
 $saver2->load ;
 
+my %expect3 = %expect ;
+# delete annotations loaded on missing elements
+delete $expect3{'olist:2'} ;
+
 my $h3_ref = $saver2->get_annotation_hash() ;
 print Dumper ( $h3_ref ) if $trace ;
-is_deeply ($h3_ref,\%expect ,"check loaded annotation data with non-empty tree") ;
+is_deeply ($h3_ref,\%expect3 ,"check loaded annotation data with non-empty tree") ;
